# analyse-f1

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: fastest_lap_championship.py  miami_sq3_comparisons.py  plot.py  qualifying_championship.py  race_qualifying_championship.py
src/analyse_f1/: __init__.py  main.py
tests/: test_init.py
